--- a/CSSFiles/Registration.css
+++ b/CSSFiles/Registration.css
@@ -95,7 +95,7 @@ body {
 /* Dark Mode */
 body.dark-mode {
   background: var(--bgc-dark);
-  color: var(--p-dark-font);
+  color: var(--p-dark);
 }
 
 body.dark-mode .sidebar {
@@ -104,23 +104,23 @@ body.dark-mode .sidebar {
 }
 
 body.dark-mode .sidebar h2 {
-  color: var(--h2-crayola);
+  color: var(--h2);
 }
 
 body.dark-mode .sidebar a {
-  color: var(--p-dark-font);
+  color: var(--p-dark);
 }
 
 body.dark-mode .sidebar a:hover {
-  color: var(--h4-green-apple);
+  color: var(--h4);
 }
 
 body.dark-mode h1.title {
-  color: var(--h2-crayola);
+  color: var(--h2);
 }
 
 body.dark-mode h2.subtitle {
-  color: var(--h4-green-apple);
+  color: var(--h4);
 }
 
 body.dark-mode .card {
@@ -128,24 +128,22 @@ body.dark-mode .card {
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
 }
 
-body.dark-mode .form-label {
-  color: var(--p-dark-font);
+body.dark-mode .form-label,
+body.dark-mode label {
+  color: var(--p-dark);
+}
+
+body.dark-mode ::placeholder {
+  color: #ccc;
 }
 
 body.dark-mode .form-control,
 body.dark-mode .form-select {
   background-color: var(--darkest-pink);
   border-color: var(--darker-pink);
-  color: var(--p-dark-font);
+  color: var(--p-dark);
 }
 
-body.dark-mode .btn-primary {
-  background-color: var(--darker-pink);
-}
-
-body.dark-mode .btn-primary:hover {
-  background-color: var(--dark-pink);
-}
 #summarypage{
   margin: 0% 40% 5% 40%;
   width: fit-content;
